fix: wrong font filename

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'Inter SemiBold';
-  src: url('/fonts/Inter-Semibold.woff2');
+  src: url('/fonts/Inter-SemiBold.woff2');
 }
 
 @font-face {
